# histarchexplorer

./: .gitignore  .pylintrc  README.md  config.py  pyproject.toml  runserver.py  warm_entity_cache.py
.github/hooks/: post-checkout  post-merge  setup-hooks.sh
.junie/: guidelines.md
config/: admin_fields.py  default.py
histarchexplorer/: __init__.py  util.py  views.py
histarchexplorer/_deprecated_code/: entity.py  types.py
histarchexplorer/api/: api.py  api_access.py  helpers.py  parser.py  presentation_view.py  util.py
histarchexplorer/config/: admin_fields.py
histarchexplorer/database/: about.py  admin.py  config.py  config_classes.py  config_properties.py  config_types.py  entities.py  entity.py  map.py  settings.py  (+1 more)
install/: 1_structure.sql  2_data_model.sql  4_files.sql  about.sql  example_apache_apt.conf  example_apache_uv.conf  install_script.py  reset.sql  update_acronym.sql
instance/: example_production.py  example_testing.py
templates/: about.html  layout.html  navbar.html
tests/: .coveragerc  .pytest.ini  base.py  conftest.py  test_about.py  test_about_views.py  test_admin.py  test_admin_extra.py  test_admin_integration.py  test_admin_routes_extra.py  test_api_util.py  test_browse.py  test_database_admin_unit.py  test_database_entity.py  test_entities.py  test_entity.py  test_entity_logic.py  test_entity_views.py  test_index.py  test_login.py  test_main_views.py  test_media.py  test_media_views.py  test_outcome.py  test_presentation_view.py  test_safeguards.py  test_search.py  test_search_model.py  test_search_views.py  test_views.py
(+250 files in other folders)
